create new page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -33,6 +33,12 @@ li {
   color: red;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
 .btn-elegant {
   display: inline-block;
   color: #00BB9C;
