--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -8,7 +8,8 @@ h1 {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  margin: 10px 0;
+  margin: 0;
+  padding: 0;
 }
 
 ul {
@@ -21,7 +22,7 @@ li {
 
 .container {
   width: 500px;
-  margin: 0 300px;
+  margin: 0 auto;
 }
 
 .link {
@@ -31,12 +32,6 @@ li {
 .link:hover {
   text-decoration: none;
   color: red;
-}
-
-.header {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
 .btn-elegant {
