--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,11 +1,9 @@
-<div class="container">
-  <div class="row">
-    <%= simple_form_for restaurant do |f| %>
-    <%= f.input :name %>
-    <%= f.input :address %>
-    <%= f.input :phone_number %>
-    <%= f.input :category %>
-    <%= f.submit class: 'btn btn-outline-primary' %>
-    <% end %>
-  </div>
+<div class="row">
+  <%= simple_form_for restaurant do |f| %>
+  <%= f.input :name %>
+  <%= f.input :address %>
+  <%= f.input :phone_number %>
+  <%= f.input :category %>
+  <%= f.submit class: 'btn-elegant' %>
+  <% end %>
 </div>
