--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,4 @@
 <div class="container">
-  <h1>Create new article</h1>
-  <%= render 'form', article: @article %>
+  <h1>Create new restaurant</h1>
+  <%= render 'form', restaurant: @restaurant %>
 </div>
