--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -1,10 +1,12 @@
 <div class="container">
   <div class="header">
-    <h1><%= @restaurant.title %></h1>
-    <%= link_to "Edit info", edit_restaurant_path, class: "btn-elegant" %>
+    <h1><%= @restaurant.name %></h1>
+    <%= link_to "Write a review", new_restaurant_review_path(@restaurant), class: "btn-elegant" %>
   </div>
-  <div class="details">
-    <p><%= @restaurant.content %></p>
+  <div>
+    <p><%= @restaurant.address %></p>
+    <p><%= @restaurant.phone_number %></p>
+    <p><%= @restaurant.category.capitalize %></p>
   </div>
   <%= link_to restaurants_path, class: "btn-elegant" do %>
     <i class="fa fa-undo"> Return to restaurants</i>
