--- a/app/views/reviews/_form.html.erb
+++ b/app/views/reviews/_form.html.erb
@@ -1,7 +1,7 @@
 <div class="row">
   <%= simple_form_for [@restaurant, @review] do |f| %>
   <%= f.input :content %>
-  <%= f.input :rating %>
+  <%= f.input :rating, collection: Review::RATINGS %>
   <%= f.submit 'Submit review', class: 'btn-elegant' %>
   <% end %>
 </div>
