--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -8,6 +8,9 @@
     <p><%= @restaurant.phone_number %></p>
     <p><%= @restaurant.category.capitalize %></p>
   </div>
+  <div>
+
+  </div>
   <%= link_to restaurants_path, class: "btn-elegant" do %>
     <i class="fa fa-undo"> Return to restaurants</i>
   <% end %>
