--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main">
   <h1>Create new restaurant</h1>
   <%= render 'form', restaurant: @restaurant %>
 </div>
