--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="main">
   <h1>Wrte new review</h1>
   <%= render 'form', restaurant:@restaurant, review: @review %>
 </div>
