--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -1,21 +1,20 @@
 <div class="main">
   <h1>Restaurants</h1>
-
-    <div class="row">
-      <% @restaurants.each do |restaurant| %>
-        <div class="col-12 col-lg-4">
-          <div class="card my-3">
-            <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
-            <div class="card-header"><%= restaurant.name %></div>
-            <div class="card-body">
-              <p class="card-text"><%= restaurant.address %></p>
-              <%= link_to "Learn more", restaurant_path(restaurant), class: "link" %>
-            </div>
-          </div>
-        </div>
-      <% end %>
-    </div>
-  <%= link_to new_restaurant_path, class: "btn-elegant" do %>
-    <i class="fa fa-plus"> Add new restaurant</i>
+  <%= link_to new_restaurant_path, class: "btn-elegant my-3" do %>
+  <i class="fa fa-plus"> Add new restaurant</i>
   <% end %>
+  <div class="row">
+    <% @restaurants.each do |restaurant| %>
+    <div class="col-12 col-lg-4">
+      <div class="card my-3">
+        <img src="https://via.placeholder.com/150" class="card-img-top" alt="...">
+        <div class="card-header"><%= restaurant.name %></div>
+        <div class="card-body">
+          <p class="card-text"><%= restaurant.address %></p>
+          <%= link_to "Learn more", restaurant_path(restaurant), class: "link" %>
+        </div>
+      </div>
+    </div>
+    <% end %>
+  </div>
 </div>
