--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -17,7 +17,7 @@
       <% @reviews.each do |review| %>
         <div class="col-12 col-lg-6">
           <div class="card my-3">
-            <div class="card-header">Review</div>
+            <div class="card-header bg-dark text-light">Review</div>
             <div class="card-body">
               <blockquote class="blockquote mb-0">
                 <p><%= review.content %></p>
