fix create in restaurant controller

--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,4 +1,6 @@
-<div class="main">
+<div class="main text-center">
   <h1>Create new restaurant</h1>
-  <%= render 'form', restaurant: @restaurant %>
+  <div>
+    <%= render 'form', restaurant: @restaurant %>
+  </div>
 </div>
