--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,7 @@
-<div class="main">
+<div class="main text-center">
   <h1>Wrte new review</h1>
-  <%= render 'form', restaurant: @restaurant, review: @review %>
+  <div>
+    <%= render 'form', restaurant: @restaurant, review: @review %>
+  </div>
+
 </div>
