--- a/app/views/restaurants/_form.html.erb
+++ b/app/views/restaurants/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="row">
+<div class="row mx-0 mt-3">
   <%= simple_form_for restaurant do |f| %>
   <%= f.input :name %>
   <%= f.input :address %>
