--- a/app/views/restaurants/new.html.erb
+++ b/app/views/restaurants/new.html.erb
@@ -1,6 +1,4 @@
-<div class="main text-center">
+<div class="main d-flex flex-column align-items-center">
   <h1>Create new restaurant</h1>
-  <div>
-    <%= render 'form', restaurant: @restaurant %>
-  </div>
+  <%= render 'form', restaurant: @restaurant %>
 </div>
