--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,7 +1,4 @@
-<div class="main text-center">
+<div class="main d-flex flex-column align-items-center">
   <h1>Wrte new review</h1>
-  <div>
-    <%= render 'form', restaurant: @restaurant, review: @review %>
-  </div>
-
+  <%= render 'form', restaurant: @restaurant, review: @review %>
 </div>
