--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,4 +1,4 @@
 <div class="main d-flex flex-column align-items-center">
-  <h1>Wrte new review</h1>
+  <h1>Write new review</h1>
   <%= render 'form', restaurant: @restaurant, review: @review %>
 </div>
