--- a/app/views/restaurants/show.html.erb
+++ b/app/views/restaurants/show.html.erb
@@ -20,9 +20,14 @@
             <div class="card-header bg-dark text-light">Review</div>
             <div class="card-body">
               <blockquote class="blockquote mb-0">
-                <p><%= review.content %></p>
-                <p class="review-footer">&mdash; <%= review.rating %> stars &mdash;<span> from Mr. ABC</span></p>
+                <div class="review-content">
+                  <p><%= review.content %></p>
+                </div>
               </blockquote>
+            </div>
+            <div class="review-footer my-0 py-1 d-flex flex-column align-items-center">
+              <p>&mdash; <%= review.rating %> stars &mdash;</p>
+              <p><%= review.customer_name %></p>
             </div>
           </div>
         </div>
